--- a/workFlowDemandeVoiture/src/main/resources/application.properties
+++ b/workFlowDemandeVoiture/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:h2:file:~/plateforme
+spring.datasource.url=jdbc:h2:file:~/workflow_voiture
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
