updated chef hie service

--- a/workFlowDemandeVoiture/src/main/resources/application.properties
+++ b/workFlowDemandeVoiture/src/main/resources/application.properties
@@ -1,13 +1,20 @@
 
-spring.datasource.url=jdbc:h2:file:~/workflow_voiture
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:file:~/workflow_voiture
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.show-sql=true
 server.port = 9000
 
 pfe.app.jwtSecret= PFESecretKey
 
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/workflow_voiture
+spring.datasource.username=postgres
+spring.datasource.password=1998
